# crssearch

./: .env.example  .gitignore  GITHUB_SYNC.md  README.md  pyproject.toml  requirements.txt  setup.py
XML_search/: __init__.py  config.py  crs_search.py  database.py  errors.py  main.py  pytest.ini  requirements.txt  test_token.py
XML_search/bot/: __init__.py  bot_manager.py  config.py  migration.py  states.py
XML_search/config/: db_config.json  enhanced_config.json  export_config.json
XML_search/enhanced/: __init__.py  cache_manager.py  config_enhanced.py  crs_search.py  db_context.py  db_manager.py  db_manager_enhanced.py  db_pool.py  db_retry.py  exceptions.py  log_manager.py  metrics_manager.py  transliterator.py
XML_search/spravka/: GM25.py  Inline_Export_Fix_Documentation.md  (+6 more)
config/: enhanced_config.json
logs/: metrics.json
output/: 2025014_MSK50z2_v20.prj  2USK_4ertovoKoryto_civil3d.xml  GSK11z10_v20.prj  GSK11z10_v25.prj  GSK11z13.3_v25.prj  GSK11z7_v20.prj  GSK11z7_v25.prj  GSK2011_VSJM_v25.prj  MGGT_civil3d.xml  MGGT_v20.prj  MGGT_v25.prj  MSK01z1_v25.prj  MSK01z2_civil3d.xml  MSK01z2_v20.prj  MSK01z2_v25.prj  MSK02z1_v25.prj  MSK165_Kada_tr_v25.prj  MSK50z2_v25.prj  SK42z10_v25.prj  SK42z13.3_v25.prj  SK42z7_v25.prj  SK63H_v20.prj  SK63Pz3_v20.prj  SK63Pz3_v25.prj  SK63Vz6_v25.prj  SK63Wz2.6_v25.prj  SK95z13.3_v25.prj  SK95z18.3_v20.prj  SK95z18.3_v25.prj  SK95z7_v20.prj  SK95z7_v25.prj  SK95z8_v20.prj  USK_4ertovoKoryto_v20.prj  USK_4ertovoKoryto_v25.prj  WGS_84_UTM_zone_37N_civil3d.xml  civil3d_100000.xml  civil3d_100146.xml  civil3d_100619.xml
(+152 files in other folders)
