[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "XML_search"
version = "1.0.0"
authors = [
    { name="Aleksandr", email="example@example.com" }
]
description = "Telegram bot for coordinate system search and export"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["XML_search"] 